tambah judul nama

--- a/rohim.html
+++ b/rohim.html
@@ -5,5 +5,5 @@
 <h1><B>biodata SMK-alMUNAWWARIYYAH</B></h1>
 <a role="button" class="_42ft _4jy0 _6lti _4jy6 _4jy2 selected _51sy" href="#" ajaxify="/reg/spotlight/" id="u_0_2_k3" data-testid="open-registration-form-button" rel="async">INPO INPO</a>
     <P></P>
-
+    <h1><B>ROHIM</B></h1>
 
