--- a/rohim.html
+++ b/rohim.html
@@ -1,8 +1,13 @@
-<html>
-<body>
-    <div class="_8ice"><img class="SMK_logo _8ilh img" src="https://almunawwariyyah.sch.id/smk-al-munawwariyyah/" alt="SMK-BISA"></div>
+<!DOCTYPE html>
+<head>
+<title>biodata-rohim</title>
 
-<h1><B>biodata SMK-alMUNAWWARIYYAH</B></h1>
-<a role="button" class="_42ft _4jy0 _6lti _4jy6 _4jy2 selected _51sy" href="#" ajaxify="/reg/spotlight/" id="u_0_2_k3" data-testid="open-registration-form-button" rel="async">INPO INPO</a>
-    <P>sekolahanku</P>
+<h1>biodata-rohim</h1>
+<P>ini adalah tugas pkl saya</p>
+<P>jika anda ingin lihat buka link di bawah ini</P>
+<a href="https://www.biodata-rohim.com">biodata-rohim</a>
+<img src="https://w7.pngwing.com/pngs/493/736/png-transparent-arrow-directions-left-downwards-southwest-pointing-pointers-symbol-sign-white.png" width="400" heiht="500">
+
+
+
 
