--- a/rohim.html
+++ b/rohim.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <head>
-<title>biodata-rohim</title>
+<title>Mohammad Rohim</title>
+<link rel="icon" type="image/x-icon" href="assets/icon.png" alt="none">
+</head>
 
-<h1>biodata-rohim</h1>
-<P>ini adalah tugas pkl saya</p>
-<P>jika anda ingin lihat buka link di bawah ini</P>
-<a href="https://www.biodata-rohim.com">biodata-rohim</a>
-<img src="https://w7.pngwing.com/pngs/493/736/png-transparent-arrow-directions-left-downwards-southwest-pointing-pointers-symbol-sign-white.png" width="400" heiht="500">
+<body>
+    <ul>
+        <li>
+            <a href="#">Beranda</a>
+       </li>
+       <li>
+            <a href="#">Biodata</a>
+       </li>
+       <li>
+            <a href="#">Skill</a>
+        </li>
+        <li>
+            <a href="contact.html">Contact</a>
+        </li>  
+    </ul>
+</body>
+
 
 
 
