--- a/rohim.html
+++ b/rohim.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <head>
 <title>Mohammad Rohim</title>
-<link rel="icon" type="image/x-icon" href="assets/icon.png" alt="none">
+<link rel="icon" type="image/x-icon" href="assets/fotoku.jfif"none">
 </head>
 
 <body>
-    <ul>
+    <ul><b>
         <li>
-            <a href="#">Beranda</a>
-       </li>
-       <li>
-            <a href="#">Biodata</a>
-       </li>
-       <li>
-            <a href="#">Skill</a>
+            <a href="rohim.html">Beranda</a>
+        </li>
+        <li>
+            <a href="biodata.html">Biodata</a>
+        </li>
+        <li>
+            <a href="skill.html">Skill</a>
         </li>
         <li>
             <a href="contact.html">Contact</a>
-        </li>  
+    </b></li>  
     </ul>
 </body>
 
