--- a/biodata.html
+++ b/biodata.html
@@ -12,6 +12,22 @@
     <li><b>
         <a href="rohim.html">Beranda</a>
     </b></li>
-    
+    <p>VISI
+
+        “Menjadi Pusat Pendidikan dan Pelatihan Kejuruan yang unggul dalam Membentuk Lulusan yang berakhlaqul karimah, dan berprestasi di bidang IT dan desain busana islami dalam menghadapi dunia global”.
+        
+        Indikator:
+        1.Terwujudnya lembaga pendidikan sebagai pusat pendidikan dan pelatihan
+        2.Terwujudnya pengembangan kurikulum yang berkualitas.
+        3.Terwujudnya proses pembelajaran aktif.
+        4.Terwujudnya siswa yang berprestasi di bidang IT dan desain busana yang islami.
+        5.Terwujudnya lulusan yang beriman dan bertaqwa, dan berbudi pekerti luhur, cerdas, berkompetitif dan siap kerja.
+        6.Terwujudnya kegiatan pengembangan diri.
+        7.Terwujudnya sarana dan prasarana serta media pendidikan seimbang dengan perkembangan iptek.
+        8.Terwujudnya optimalisasi tenaga kependidikan yang berkompeten, berdedikasi tinggi.
+        9.Terwujudnya manajemen pendidikan yang tanggap dan tangguh, serta optimalisasi partisipasi stakeholder.
+        10.Terwujudnya pengelolaan sumber dana dan biaya pendidikan yang memadai.
+    </p>    
+
 </body>
 </html>
