--- a/rohim.html
+++ b/rohim.html
@@ -2,6 +2,7 @@
 <head>
 <title>Mohammad Rohim</title>
 <link rel="icon" type="image/x-icon" href="assets/fotoku.jfif"none">
+<link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
