--- a/skill.html
+++ b/skill.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>skill -mohammad rohim</title>
     <link rel="icon" type="image/x-icon" href="assets/fotoku.jfif"none">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <li><b>
