--- a/biodata.html
+++ b/biodata.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>biodata -mohammad rohim</title>
     <link rel="icon" type="image/x-icon" href="assets/fotoku.jfif"none">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <ul>
@@ -30,7 +31,7 @@
               <P>10.Terwujudnya pengelolaan sumber dana dan biaya pendidikan yang memadai.</P>     
             </p>
      
-      <P CLASS="right"><B>MISI</B></P> 
+      <P CLASS="center"><B>MISI</B></P> 
         <P CLASS="left">
             <p>1.Pengembangan secara berkelanjutan sebagai pusat pendidikan dan pelatihan kejuruan melalui peningkatan kwalitas pendidikan, pendidik dan tenaga kependidikan, sarana pendidikan, serta pengabdian kepada masyarakat”.</p>
             <p>2.Mewujudkan Kurikulum Tingkat satuan Pendidikan (KTSP) yang lengkap, relevan dengan kebutuhan, dan berwawasan regional dan nasional.</p>
