--- a/biodata.html
+++ b/biodata.html
@@ -9,10 +9,21 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <ul>
-        <li><b>
-            <a href="rohim.html">Beranda</a>
-        </b></li>
+    <div class="kotak-header">
+        <div class="fixed">
+        <ul>
+            <li><b>
+                <a href="rohim.html">Beranda</a>
+            </b></li>
+            <li><b>
+                <a href="rohim.html">Lokasi</a>
+            </b></li>
+            <li><b>
+                <a href="rohim.html">Contact</a>
+            </b></li>
+        </ul>
+        </div>  
+    </div>
     
      <P class="center"><b>VISI DAN MISI SMK alMUNAWWARIYYAH</b></P>
       <p class="center"><B>VISI</B></p>
@@ -60,6 +71,11 @@
 
 
 
-    </ul>
+    
+    <div class="kotak-footer">
+        <p class="center">
+            <b><span class="identitas-footer">Mohammad Rohim - 2022</span></b>
+        </p>
+    </div>
 </body>
 </html>
