--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Mohammad Rohim</title>
-    <link rel="icon" type="image/x-icon" href="assets/icon.png" alt="none">
+    <link rel="icon" type="image/x-icon" href="assets/fotoku.jfif"none">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <ul>
+        <li><b>
+            <a href="rohim.html">Beranda</a>
+        </b></li>
+    </ul>
+     <a href="https://wa.me/083848133883">langsung whatsapp</a>
+    
     
 </body>
 </html>
