--- a/biodata.html
+++ b/biodata.html
@@ -16,16 +16,16 @@
                 <a href="rohim.html">Beranda</a>
             </b></li>
             <li><b>
-                <a href="rohim.html">Lokasi</a>
+                <a href="skill.html">skill</a>
             </b></li>
             <li><b>
-                <a href="rohim.html">Contact</a>
+                <a href="contact.html">Contact</a>
             </b></li>
         </ul>
         </div>  
     </div>
     
-     <P class="center"><b>VISI DAN MISI SMK alMUNAWWARIYYAH</b></P>
+     <P class="center"><b>VISI DAN MISI SMK alMUNAWWARIYYAH</b></P><br>
       <p class="center"><B>VISI</B></p>
        <p class="center">“Menjadi Pusat Pendidikan dan Pelatihan Kejuruan yang unggul dalam Membentuk Lulusan yang berakhlaqul karimah, dan berprestasi di bidang IT dan desain busana islami dalam menghadapi dunia global”.</p>
         <p class="left"> Indikator:</p>
@@ -40,9 +40,9 @@
               <P>8.Terwujudnya optimalisasi tenaga kependidikan yang berkompeten, berdedikasi tinggi.</P>  
               <P>9.Terwujudnya manajemen pendidikan yang tanggap dan tangguh, serta optimalisasi partisipasi stakeholder.</P>  
               <P>10.Terwujudnya pengelolaan sumber dana dan biaya pendidikan yang memadai.</P>     
-            </p>
+            </p><br> 
      
-      <P CLASS="center"><B>MISI</B></P> 
+      <P CLASS="center"><B>MISI</B></P>
         <P CLASS="left">
             <p>1.Pengembangan secara berkelanjutan sebagai pusat pendidikan dan pelatihan kejuruan melalui peningkatan kwalitas pendidikan, pendidik dan tenaga kependidikan, sarana pendidikan, serta pengabdian kepada masyarakat”.</p>
             <p>2.Mewujudkan Kurikulum Tingkat satuan Pendidikan (KTSP) yang lengkap, relevan dengan kebutuhan, dan berwawasan regional dan nasional.</p>
