--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
             <a href="rohim.html">Beranda</a>
         </b></li>
     </ul>
+    <p>INI NOMER SAYA:<strong>083848133883</strong></p>
      <a href="https://wa.me/083848133883">langsung whatsapp</a>
     
     
