--- a/biodata.html
+++ b/biodata.html
@@ -13,7 +13,7 @@
         <div class="fixed">
         <ul>
             <li><b>
-                <a href="https://wa.me/083848133883">Beranda</a>
+                <a href="rohim.html">Beranda</a>
             </b></li>
             <li><b>
                 <a href="skill.html">skill</a>
