--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         </b></li>
     </ul>
     <p>INI NOMER SAYA:<strong>083848133883</strong></p>
-     <a href="https://wa.me/083848133883">langsung whatsapp</a>
+     <a href="https://wa.me/083848133883"><b>langsung whatsapp</b></a>
     
     
 </body>
