--- a/biodata.html
+++ b/biodata.html
@@ -7,11 +7,16 @@
     <title>biodata -mohammad rohim</title>
     <link rel="icon" type="image/x-icon" href="assets/fotoku.jfif"none">
     <link rel="stylesheet" href="stylesheet.css">
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="kotak-header">
         <div class="fixed">
-        <ul>
+        <ul class="menu">
             <li><b>
                 <a href="https://wa.me/083848133883">Beranda</a>
             </b></li>
@@ -19,6 +24,23 @@
                 <a href="rohim.html">Lokasi</a>
             </b></li>
             <li><b>
+                <a href="rohim.html">Lokasi</a>
+            </b></li><li><b>
+                <a href="rohim.html">Lokasi</a>
+            </b></li><li><b>
+                <a href="rohim.html">Lokasi</a>
+            </b></li><li><b>
+                <a href="rohim.html">Lokasi</a>
+            </b></li><li><b>
+                <a href="rohim.html">Lokasi</a>
+            </b></li>
+            <li class="right"><b>
+                <a href="rohim.html">Lokasi</a>
+            </b></li>
+            <li class="right"><b>
+                <a href="rohim.html">Contact</a>
+            </b></li>
+            <li class="right"><b>
                 <a href="rohim.html">Contact</a>
             </b></li>
         </ul>
