--- a/rohim.html
+++ b/rohim.html
@@ -14,6 +14,9 @@
             <a href="biodata.html">Biodata</a>
         </li>
         <li>
+            <a href="biodata.html">Biodata</a>
+        </li>
+        <li>
             <a href="skill.html">Skill</a>
         </li>
         <li>
