--- a/biodata.html
+++ b/biodata.html
@@ -18,25 +18,23 @@
         <div class="fixed">
         <ul class="menu">
             <li><b>
-                <a href="rohim.html">Beranda</a>
+              <a href="rohim.html">Beranda</a>
             </b></li>
             <li><b>
-                <a href="skill.html">skill</a>
+              <a href="skill.html">skill</a>
             </b></li>
-            <li><b>
-                <a href="contact.html">Contact</a>
-            </b></li>
+
             <li class="right"><b>
-                <a href="rohim.html">Beranda</a>
+              <a href="contact.html">Contact</a>
             </b></li>
         </ul>
         </div>  
-    </div>
-    
-     <P class="center"><b>VISI DAN MISI SMK alMUNAWWARIYYAH</b></P><br>
-      <p class="center"><B>VISI</B></p>
-       <p class="center">“Menjadi Pusat Pendidikan dan Pelatihan Kejuruan yang unggul dalam Membentuk Lulusan yang berakhlaqul karimah, dan berprestasi di bidang IT dan desain busana islami dalam menghadapi dunia global”.</p>
-        <p class="left"> Indikator:</p>
+    </div>    
+    <div class="font">
+        <p class="center"><b>VISI DAN MISI SMK alMUNAWWARIYYAH</b></P><br>
+          <p class="center"><B>VISI</B></p>
+            <p class="center">“Menjadi Pusat Pendidikan dan Pelatihan Kejuruan yang unggul dalam Membentuk Lulusan yang berakhlaqul karimah, dan berprestasi di bidang IT dan desain busana islami dalam menghadapi dunia global”.</p>      
+          <p class="left"> Indikator:</p>
             <p class="left">
               <p>1.Terwujudnya lembaga pendidikan sebagai pusat pendidikan dan pelatihan</p>
               <p>2.Terwujudnya pengembangan kurikulum yang berkualitas.</p> 
@@ -69,7 +67,7 @@
             <p>15.Mewujudkan pengelolaan pembiayaan pendidikan yang memadai, wajar dan adil.</p>
             <p>16.Mengoptimalkan peran masyarakat dan membentuk jejaring dengan sekolah.</p>
         </P>    
-        
+    </div>    
 
 
 
