--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,32 @@
     <title>Contact - Mohammad Rohim</title>
     <link rel="icon" type="image/x-icon" href="assets/fotoku.jfif"none">
     <link rel="stylesheet" href="stylesheet.css">
+     <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <ul>
-        <li><b>
-            <a href="rohim.html">Beranda</a>
-        </b></li>
-    </ul>
-    <p>INI NOMER SAYA:<strong>083848133883</strong></p>
-     <a href="https://wa.me/083848133883"><b>langsung whatsapp</b></a>
+    <div class="kotak-header">
+        <div class="fixed">
+         <ul class="menu">
+            <li><b>
+              <a href="rohim.html">Beranda</a>
+            </b></li>
+            <li><b>
+              <a href="skill.html">skill</a>
+            </b></li>
+            <li><b>
+              <a href="biodata.html">biodata</a>
+            </b></li>
+         </ul>
+        </div>  
+    </div>      
+    <div class="font">
+        <p>INI NOMER SAYA:<strong>083848133883</strong></p>
+        <a href="https://wa.me/083848133883"><b>langsung whatsapp</b></a>
+    </div>
+   
     
     
 </body>
