--- a/rohim.html
+++ b/rohim.html
@@ -7,21 +7,28 @@
 
 
 <body>
-    <ul><b>
-        <li>
-            <a href="rohim.html">Beranda</a>
-        </li>
-        <li>
-            <a href="biodata.html">Biodata</a>
-        </li>
-        <li>
-            <a href="skill.html">Skill</a>
-        </li>
-        <li>
-            <a href="contact.html">Contact</a>
-    </b></li>  
-    </ul>
     
+    <div class="kotak-header">
+        <div class="fixed">
+        <ul class="menu">
+            <li><b>
+              <a href="rohim.html">Beranda</a>
+            </b></li>
+            <li><b>
+              <a href="biodata.html">biodata</a>
+            </b></li>
+
+            <li class="right"><b>
+              <a href="contact.html">Contact</a>
+            </b></li>
+            <li class="right"><b>
+              <a href="skill.html">skill</a>
+            </b></li>
+        </ul>
+        </div>  
+    </div>    
+    
+   
 </body>
 
 
