--- a/rohim.html
+++ b/rohim.html
@@ -21,14 +21,20 @@
             <li class="right"><b>
               <a href="contact.html">Contact</a>
             </b></li>
-            <li class="right"><b>
+            <li><b>
               <a href="skill.html">skill</a>
             </b></li>
         </ul>
         </div>  
-    </div>    
-    
-   
+    </div>
+    <p>
+      <strong>perkenalkan</strong>
+    </p> 
+  <div class="font">
+    <p><b>NAMA:</b>MOH.ROHIM</p>
+    <P><B>KELAS:</B>XI TKJ B</P>
+    <P><B>ABSEN:</B>12</P> 
+  </div> 
 </body>
 
 
