--- a/skill.html
+++ b/skill.html
@@ -29,12 +29,12 @@
         </ul>
         </div>  
     </div> 
-    
-     <img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsroutpFG0CpffUHNueepaSR4O9OepktgcuA&usqp=CAU"/>
-    
+    <p class="center">
+     <img height="300" width="500" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsroutpFG0CpffUHNueepaSR4O9OepktgcuA&usqp=CAU"/>
+    </p>
      <div class="font">
        <p style="text-indent: 45px;"><b>Skill adalah</b> sesuatu yang dapat diukur dan dinilai melalui tes keterampilan. Beberapa profesi membutuhkan keterampilan tertentu yang dapat meningkatkan produktivitas dan hasil dari pekerjaan atau tugas untuk profesi tersebut.
-       </p><br>
+       </p><br><hr>
        <p>
 
        </p>
