--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,15 @@
         </div>  
     </div>      
     <div class="font">
-        <p>INI NOMER SAYA:<strong>083848133883</strong></p>
-        <a href="https://wa.me/083848133883"><b>langsung whatsapp</b></a>
+        <p class="center">INI NOMER SAYA:<strong>083848133883</strong></p>
+        <a class="center" href="https://wa.me/083848133883"><b>langsung whatsapp</b></a>
     </div>
    
-    
+    <div class="kotak-footer">
+      <p class="center">
+          <b><span class="identitas-footer">Mohammad Rohim - 2022</span></b>
+      </p>
+    </div>
     
 </body>
 </html>
