--- a/skill.html
+++ b/skill.html
@@ -34,12 +34,21 @@
     </p>
      <div class="font">
        <p style="text-indent: 45px;"><b>Skill adalah</b> sesuatu yang dapat diukur dan dinilai melalui tes keterampilan. Beberapa profesi membutuhkan keterampilan tertentu yang dapat meningkatkan produktivitas dan hasil dari pekerjaan atau tugas untuk profesi tersebut.
-       </p><br><hr>
-       <p>
-
        </p>
-    </div>  
+       <p style="text-indent: 45px;"><b>Jika</b> teman-teman ingin mempunyai bakat atau skill tentang bahasa pemrograman web,dll silahkan kunjungi situs di bawah ini
+       </p><hr>
 
+     <p><a href="https://www.w3schools.com/"> website belajar bhs.pemrograman</a></p>
+     <p><a href="https://dribbble.com/tags/webdesign"> website contoh desain web</a></p> 
+     <p><a href="https://github.com/ArticBurn/desainweb">saya menggunakan website ini untuk upload tugas ke pembimbing</a></p>  
+     <p><a href="https://unsplash.com/">untuk mencari foto aesthetich</a></p>  
+       
+    </div>  
+    <div class="kotak-footer">
+      <p class="center">
+          <b><span class="identitas-footer">Mohammad Rohim - 2022</span></b>
+      </p>
+    </div>
     
 </body>
 </html>
