--- a/rohim.html
+++ b/rohim.html
@@ -27,16 +27,47 @@
         </ul>
         </div>  
     </div>
-    <p>
+    <p style="text-indent:25px;">
       <strong>perkenalkan</strong>
     </p> 
   <div class="font">
     <p><b>NAMA:</b>MOH.ROHIM</p>
     <P><B>KELAS:</B>XI TKJ B</P>
     <P><B>ABSEN:</B>12</P> 
+    <P><B>SEKOLAH:</B>SMK-alMUNAWWARIYYAH</P> <HR><BR>
+     <p><b>ASSALAMU'ALAIKUM WR.WB</b></p><BR> 
+    <P style="text-indent:25px"><b>Ini adalah</b> desain web saya,disini saya tidak hanya belajar bahasa pemrograman web,saya juga di ajarkan bahasa pemrograman lainnya seperti,css,dll tidak hanya itu saya juga di ajarkan menginstal windows</P> 
+    <p  style="text-indent:25px"><b>Mohon maaf</b> jika web buatan saya ada kurangnya,karna saya manusia bukan malaikat,tapi saya akan terus berusaha untuk menyempurnakannya </p>
+     <P style="text-indent:600px"><b>WASSALAMU'ALAIKUM WR.WB</b></P> 
+  
+  
+  
   </div> 
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <div class="kotak-footer">
+    <p class="center">
+        <b><span class="identitas-footer">Mohammad Rohim - 2022</span></b>
+    </p>
+  </div>
 </body>
-
+</html>
 
 
 
