--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -45,7 +45,7 @@
         </div>
       </div>
     </nav>
-  <!-- akhir navbar -->
+  <!-- akhir navbar a-->
 
   <!-- jumbotron -->
         <div class="jumbotron text-center" >
