--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -40,7 +40,7 @@
             <li><a href="#about" class="page-scroll">about</a></li>
             <li><a href="#portfolio" class="page-scroll">portfolio</a></li>
             <li><a href="#contact" class="page-scroll">contact</a></li>
-            <li><a href="teks pengetahuan.txt" class="page-scroll">pengetahuan</a></li>
+            <li><a href="teks pengetahuan.txt" class="page-scroll">Pengetahuan</a></li>
           </ul>
         </div>
       </div>
