--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -37,7 +37,7 @@
       
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about" class="page-scroll">about</a></li>
+            <li><a href="#about" class="page-scroll">About</a></li>
             <li><a href="#portfolio" class="page-scroll">portfolio</a></li>
             <li><a href="#contact" class="page-scroll">contact</a></li>
             <li><a href="teks pengetahuan.txt" class="page-scroll">Pengetahuan</a></li>
