--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -39,7 +39,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#about" class="page-scroll">About</a></li>
             <li><a href="#portfolio" class="page-scroll">Portfolio</a></li>
-            <li><a href="#contact" class="page-scroll">contact</a></li>
+            <li><a href="#contact" class="page-scroll">Contact</a></li>
             <li><a href="teks pengetahuan.txt" class="page-scroll">Pengetahuan</a></li>
           </ul>
         </div>
