--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -92,19 +92,19 @@
                 </div>
               </div>
               <div class="row  text-center">
-                <div class="col-sm-3">
+                <div class="col-sm-3 porto">
                 <a href="assets/1.jpeg"><img src="assets/1.jpeg" class="img-thumbnail">
                 </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 porto">
                   <a href="assets/2.jpeg"><img src="assets/2.jpeg" class="img-thumbnail">
                   </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 porto">
                   <a href="assets/3.jpeg"><img src="assets/5.jpeg" class="img-thumbnail">
                   </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 porto">
                   <a href="assets/4.jpeg"><img src="assets/4.jpeg" class="img-thumbnail">
                   </a><br><br><br><br><br><br><br><br><br><br>
                 </div>
